platform/ingress/authentik.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik
  namespace: authentik
  annotations:
    external-dns.alpha.kubernetes.io/target: "<TUNNEL-UUID>.cfargotunnel.com"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.example.com`)
      kind: Rule
      services:
        - name: authentik-server
          port: 80
      middlewares:
        - name: crowdsec-bouncer
          namespace: traefik
        - name: redirect-https
          namespace: traefik
  tls: {}
