platform/ingress/gitea.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gitea
  annotations:
    external-dns.alpha.kubernetes.io/target: "<TUNNEL-UUID>.cfargotunnel.com"
  namespace: gitea
spec:
  entryPoints: [websecure]
  tls:

  routes:
    - match: Host(`gitea.example.com`)
      kind: Rule
      middlewares:
        - name: crowdsec-bouncer
          namespace: traefik
      services:
        - name: gitea-http
          port: 3000
