platform/ingress/homepage.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage
  namespace: homepage
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`home.example.com`)
      kind: Rule
      services:
        - name: homepage
          port: 3000
      middlewares:
        - name: crowdsec-bouncer
          namespace: traefik
        - name: redirect-https
          namespace: traefik
  tls: {}
