platform/ingress/monitoring.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints: [websecure]
  tls:

  routes:
    - match: Host(`grafana.example.com`)
      kind: Rule
      middlewares:
        - name: crowdsec-bouncer
          namespace: traefik
      services:
        - name: monitoring-grafana
          port: 80
