platform/ingress/paperless.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: paperless
  namespace: paperless
  annotations:
    external-dns.alpha.kubernetes.io/target: "<TUNNEL-UUID>.cfargotunnel.com"
spec:
  entryPoints: [websecure]
  tls: {}
  routes:
    - match: Host(`paperless.example.com`)
      kind: Rule
      middlewares:
        - name: crowdsec-bouncer
          namespace: traefik
      services:
        - name: paperless-web
          port: 8000
