platform/ingress/vaultwarden.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vaultwarden
  annotations:
    external-dns.alpha.kubernetes.io/target: "<TUNNEL-UUID>.cfargotunnel.com"
  namespace: vaultwarden
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`vault.example.com`)
      kind: Rule
      services:
        - name: vaultwarden
          port: 80
      middlewares:
        - name: crowdsec-bouncer
          namespace: traefik
        - name: redirect-https
          namespace: traefik
  tls: {}
